[package]
name = "corylus"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
amethyst = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
webbrowser = "0.5"

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
